<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Round">


    <TextView
        android:id="@+id/humanScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_score"
        app:layout_constraintBottom_toTopOf="@+id/humanHandLinear"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/displayCapturePileOrHandCardHuman"
        android:layout_width="186dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:text="Capture Pile"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/humanHandLinear"
        app:layout_constraintRight_toLeftOf="@+id/humanScore"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Human Hand"
        app:layout_constraintBottom_toTopOf="@+id/humanHandLinear"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/computerHandScroll"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:id="@+id/computerHand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />
    </HorizontalScrollView>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computerHandScroll"
        app:layout_constraintVertical_bias="0.73">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_pile" />

        <HorizontalScrollView
            android:id="@+id/stockScroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/stockPile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/humanHandLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computerHandScroll"
        app:layout_constraintVertical_bias="0.598">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout"/>
        <HorizontalScrollView
            android:id="@+id/layoutScroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:isScrollContainer="true">

            <LinearLayout
                android:id="@+id/layoutPile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/humanHandLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <HorizontalScrollView
            android:id="@+id/humanHandScroll"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="100dp">

            <LinearLayout
                android:id="@+id/humanHand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </HorizontalScrollView>

    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundNo" />

    <Button
        android:id="@+id/displayCapturePileOrHandCardComputer"
        android:layout_width="146dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:text="Capture Pile"
        android:textSize="12sp"

        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintRight_toLeftOf="@+id/computerScore"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/computerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer_score_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundNo" />

    <TextView
        android:id="@+id/roundNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_no"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />







</androidx.constraintlayout.widget.ConstraintLayout>